syntax = "proto3";

message FontCollection {
    uint32 flavor = 1;
    uint32 header_version = 2;
    map<uint32, FontTable> tables = 3;
    repeated Font fonts = 4;
}

message Glyph {
    int32 x_min = 1;
    int32 x_max = 2;
    int32 y_min = 3;
    int32 y_max = 4;
    uint32 instructions_size = 5;
    bytes instructions_data = 6;
    bool overlap_simple_flag_set = 7;
    repeated ContourVec contours = 8;
    bytes composite_data = 9;
    uint32 composite_data_size = 10;
    bool have_instructions = 11;
}

message RebuildMetadata {
    uint32 header_checksum = 1;
    repeated WOFF2FontInfo font_infos = 2;
    map<uint64, uint32> checksums = 3;
}

message Font {
    uint32 flavor = 1;
    uint32 num_tables = 2;
    map<uint32, FontTable> tables = 3;
}

message Point {
    int32 x = 1;
    int32 y = 2;
    bool on_curve = 3;
}

message TtcFont {
    uint32 flavor = 1;
    uint32 dst_offset = 2;
    uint32 header_checksum = 3;
    repeated uint32 table_indices = 4;
}

message Buffer {
    bytes buffer = 1;
    uint64 length = 2;
    uint64 offset = 3;
}

message WOFF2FontInfo {
    uint32 num_glyphs = 1;
    uint32 index_format = 2;
    uint32 num_hmetrics = 3;
    repeated int32 x_mins = 4;
    map<uint32, uint32> table_entry_by_tag = 5;
}

message FontTable {
    uint32 tag = 1;
    uint32 checksum = 2;
    uint32 offset = 3;
    uint32 length = 4;
    bytes data = 5;
    repeated uint8 buffer = 6;
    FontTable reuse_of = 7;
    uint8 flag_byte = 8;
}

message GlyphPoint {
    int32 x = 1;
    int32 y = 2;
    bool on_curve = 3;
}

message WOFF2Header {
    uint32 flavor = 1;
    uint32 header_version = 2;
    uint32 num_tables = 3;
    uint64 compressed_offset = 4;
    uint32 compressed_length = 5;
    uint32 uncompressed_size = 6;
    repeated Table tables = 7;
    repeated TtcFont ttc_fonts = 8;
}

message Table {
    uint32 tag = 1;
    uint32 flags = 2;
    uint32 src_offset = 3;
    uint32 src_length = 4;
    uint32 transform_length = 5;
    uint32 dst_offset = 6;
    uint32 dst_length = 7;
    bytes dst_data = 8;
}

message GlyfEncoder {
    repeated uint8 n_contour_stream = 1;
    repeated uint8 n_points_stream = 2;
    repeated uint8 flag_byte_stream = 3;
    repeated uint8 composite_stream = 4;
    repeated uint8 bbox_bitmap = 5;
    repeated uint8 bbox_stream = 6;
    repeated uint8 glyph_stream = 7;
    repeated uint8 instruction_stream = 8;
    repeated uint8 overlap_bitmap = 9;
    int32 n_glyphs = 10;
}

message ContourVec {
    repeated GlyphPoint points = 1;
}