#include <woff2/woff2.h>
#include "woff2.pb.h"
#include <fstream>

void FontCollection2Proto(const FontCollection& input, FontCollectionProto& result) {
    result.set_flavor(input.flavor());
    result.set_header_version(input.header_version());
    for (const auto& table : input.tables()) {
        (*result.mutable_tables())[table.first] = table.second;
    }
    for (const auto& font : input.fonts()) {
        FontProto* fontProto = result.add_fonts();
        Font2Proto(font, *fontProto);
    }
}

void Font2Proto(const Font& input, FontProto& result) {
    result.set_flavor(input.flavor());
    result.set_num_tables(input.num_tables());
    for (const auto& table : input.tables()) {
        (*result.mutable_tables())[table.first] = table.second;
    }
}

// Implement conversion functions for other message types...

// int main() {
//     // Read WOFF2 file into FontCollection
//     FontCollection fontCollection;
//     // Read WOFF2 data into fontCollection...

//     // Convert FontCollection to Protocol Buffer message
//     FontCollectionProto fontCollectionProto;
//     FontCollection2Proto(fontCollection, fontCollectionProto);

//     // Serialize and write to file
//     std::ofstream output("output_file.pb", std::ios::binary);
//     fontCollectionProto.SerializeToOstream(&output);

//     return 0;
// }
